Fixed section number borders and footer alignment for mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -30,9 +30,45 @@ main {
 
 footer {
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: center;
     position: relative;
     top: 25em;
     padding-bottom: 2em;
+}
+
+.logo-footer {
+    position: relative;
+    right: 1em;
+}
+
+.social {
+    margin-top: 1.5em;
+}
+
+.social img {
+    margin-right: 2em;
+top: 1em;
+}
+
+.bio-txt {
+    background-color: blueviolet;
+}
+
+.num {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid black;
+    border-radius: 50%;
+    padding: 0.5em;
+    width: 5%;
+}
+
+.insights,.data,.affordable {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
